@@ -86,3 +86,4 @@ Fixes/Patches incorporated from:
 	Chris Coyle
 	Ragnar Rova
 	Yeb Havinga
+	Jesse Wagner
